--- a/src/form.css
+++ b/src/form.css
@@ -1,6 +1,9 @@
 body{
     background-color: lightgrey;
 }
+.dashboard{
+    color: red;
+}
 .container{
     margin: 0 auto;
     max-width: 960px;
