--- a/src/form.css
+++ b/src/form.css
@@ -1,22 +1,29 @@
-body{
+.main {
+    width: 100%;
+    height: 100%;
     background-color: lightgrey;
 }
-.dashboard{
-    color: red;
+.header_{
+    width: 100%;
+    height: 100px;
 }
-.container{
+.footer{
+    height: 100vh;
+    width: 100%;
+}
+.container_{
     margin: 0 auto;
     max-width: 960px;
-}
+    }
 .main_form{
     margin: 10px auto;
     width: 30%;
-    background-color: white;
+    background: #fff;
     padding: 10px;
     border-radius: 10px;
 }
 .img_block{
-    margin: 100px auto 0;
+    margin:0 auto;
     width: 30%;
     display: block;
 
