--- a/src/Components/Dashboard/DashBoard.css
+++ b/src/Components/Dashboard/DashBoard.css
@@ -1,9 +1,16 @@
-.root{
-    height:100vh;
-    width: 100%;
+
+.card{
     max-width: 200px;
-    border-right:1px solid #e5f0f2;
+    margin-left:15px;
+    height: 320px;
+    margin-top: 5px;
 }
-.selected:focus{
-    background-color: lightgrey;
+.media{
+    height: 150px;
+}
+.displayNone{
+    display: none;
+}
+.displayBlock{
+    display: block;
 }
