--- a/src/Components/Kiosks/Kiosk.css
+++ b/src/Components/Kiosks/Kiosk.css
@@ -1,8 +1,14 @@
 .d_flex {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
 }
-
+.kioskInfo{
+    display: flex;
+    justify-content: space-around;
+}
+.kioskInfoBlockOne{
+    width: 250px;
+}
 .card_{
     width: 150px;
     height: 300px;
@@ -10,4 +16,22 @@
 }
 .img_size{
     height: 130px;
+}
+.blockTwo{
+    display: flex;
+    justify-content: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+    .kioskInfoBlockOne{
+        width:150px;
+    }
+    .blockTwo{
+        display: flex;
+        justify-content:center;
+        flex-flow: column-reverse;
+    }
+    .PickALocation{
+        margin-top: 20px;
+    }
 }
