--- a/src/Components/MainMenu/NavBar.css
+++ b/src/Components/MainMenu/NavBar.css
@@ -8,6 +8,9 @@
 .menuDisplayNone{
     display:none;
 }
+.personMargin{
+    margin-right:100px;
+}
 
 @media screen and (max-width: 768px){
     .menuDisplayNone{
@@ -16,4 +19,12 @@
     .navDisplayNone{
         display:none;
     }
+    .personMargin{
+        margin-right:70px;
+    }
+}
+@media screen and (max-width: 500px){
+    .personMargin{
+        margin-right:30px;
+}
 }
